--- a/pricing.html
+++ b/pricing.html
@@ -315,7 +315,9 @@
       <p>Flexible pricing for businesses of all sizes</p>
     </div>
 
-    <!-- Discount Code Section -->
+    <div id="pricingGrid" class="pricing-grid"></div>
+
+    <!-- Discount Code Section - Moved to Bottom -->
     <div class="discount-banner">
       <h3><i class="fas fa-tag"></i> Have a discount code?</h3>
       <div class="discount-input-group">
@@ -331,8 +333,6 @@
       </div>
       <div id="discountMessage" class="discount-message"></div>
     </div>
-
-    <div id="pricingGrid" class="pricing-grid"></div>
 
     <div style="text-align: center; margin-top: 3rem; color: #64748B;">
       <p>All plans include IPFS storage, XRPL blockchain verification, and QR code generation.</p>
