--- a/index.html
+++ b/index.html
@@ -354,9 +354,10 @@
       <h1>🚚 BizTrack</h1>
     </div>
     <ul class="sidebar-nav">
-      <li><a href="#" class="active"><i class="fas fa-home"></i> Home</a></li>
+      <li><a href="index.html" class="active"><i class="fas fa-home"></i> Home</a></li>
       <li><a href="business.html"><i class="fas fa-briefcase"></i> For Businesses</a></li>
       <li><a href="verify.html"><i class="fas fa-check-circle"></i> Verify Product</a></li>
+      <li><a href="pricing-public.html"><i class="fas fa-dollar-sign"></i> Pricing</a></li>
       <li><a href="login.html"><i class="fas fa-user"></i> Login/Signup</a></li>
     </ul>
   </nav>
@@ -369,7 +370,7 @@
         <h1>Decentralized Supply Chain Tracking on XRPL</h1>
         <p>Issue unique product IDs, track events, and verify authenticity with QR codes – no central onboarding required.</p>
         <div class="hero-buttons">
-          <a href="business.html" class="btn btn-primary">
+          <a href="register.html" class="btn btn-primary">
             <i class="fas fa-rocket"></i>
             Get Started
           </a>
@@ -421,6 +422,7 @@
     <div class="footer-content">
       <div class="footer-links">
         <a href="faq.html">FAQ</a>
+        <a href="pricing-public.html">Pricing</a>
         <a href="contact.html">Contact</a>
         <a href="privacy.html">Privacy Policy</a>
         <a href="terms.html">Terms of Service</a>
