--- a/pricing-public.html
+++ b/pricing-public.html
@@ -65,6 +65,7 @@
       font-weight: 600;
       transition: all 0.2s;
       display: inline-block;
+      text-shadow: 0 1px 2px rgba(0, 0, 0, 0.1);
     }
 
     .btn-primary:hover {
@@ -313,8 +314,7 @@
       <div class="pricing-card">
         <div class="tier-name">Free</div>
         <div class="tier-price">
-          $0
-          <span>/month</span>
+          $0<span>/month</span>
         </div>
         <div class="tier-description">Perfect for trying out BizTrack</div>
         <ul class="features-list">
@@ -337,8 +337,7 @@
         <div class="popular-badge">MOST POPULAR</div>
         <div class="tier-name">Essential</div>
         <div class="tier-price">
-          $49
-          <span>/month</span>
+          $49<span>/month</span>
         </div>
         <div class="tier-description">For growing businesses</div>
         <ul class="features-list">
@@ -361,8 +360,7 @@
       <div class="pricing-card">
         <div class="tier-name">Scale</div>
         <div class="tier-price">
-          $149
-          <span>/month</span>
+          $149<span>/month</span>
         </div>
         <div class="tier-description">For established companies</div>
         <ul class="features-list">
@@ -386,8 +384,7 @@
       <div class="pricing-card">
         <div class="tier-name">Enterprise</div>
         <div class="tier-price">
-          $499
-          <span>/month</span>
+          $499<span>/month</span>
         </div>
         <div class="tier-description">For large organizations</div>
         <ul class="features-list">
@@ -409,10 +406,8 @@
     <div class="footer-note">
       <p><strong>All plans include:</strong> IPFS storage, XRPL blockchain verification, and QR code generation</p>
       <p>Need help choosing? <a href="mailto:support@biztrack.io">Contact our team</a></p>
-      <p style="margin-top: 2rem;">
-        <a href="register.html" class="btn-primary" style="padding: 1rem 2rem; font-size: 1.125rem;">
-          <i class="fas fa-rocket"></i> Get Started Free - No Credit Card Required
-        </a>
+      <p style="margin-top: 2rem; font-size: 1rem; color: #64748B;">
+        Start with our Free plan today — upgrade anytime as your business grows
       </p>
     </div>
   </div>
