--- a/pricing-public.html
+++ b/pricing-public.html
@@ -147,6 +147,7 @@
 
     .pricing-card.featured {
       border-color: #4F46E5;
+      border-width: 3px;
       box-shadow: 0 10px 40px -10px rgba(79, 70, 229, 0.4);
     }
 
@@ -218,13 +219,13 @@
 
     .cta-button {
       width: 100%;
-      padding: 1.125rem;
+      padding: 1.25rem 1.125rem;
       background: linear-gradient(135deg, #4F46E5, #7C3AED);
       color: white;
       border: none;
       border-radius: 12px;
       font-weight: 700;
-      font-size: 1.125rem;
+      font-size: 1.25rem;
       cursor: pointer;
       transition: all 0.2s;
       display: flex;
