--- a/pricing-public.html
+++ b/pricing-public.html
@@ -149,6 +149,7 @@
       border-color: #4F46E5;
       border-width: 3px;
       box-shadow: 0 10px 40px -10px rgba(79, 70, 229, 0.4);
+      transform: scale(1.02);
     }
 
     .popular-badge {
@@ -219,19 +220,20 @@
 
     .cta-button {
       width: 100%;
-      padding: 1.25rem 1.125rem;
+      padding: 1.375rem 1.25rem;
       background: linear-gradient(135deg, #4F46E5, #7C3AED);
       color: white;
       border: none;
       border-radius: 12px;
-      font-weight: 700;
-      font-size: 1.25rem;
+      font-weight: 800;
+      font-size: 1.125rem;
+      letter-spacing: 0.025em;
       cursor: pointer;
       transition: all 0.2s;
       display: flex;
       align-items: center;
       justify-content: center;
-      gap: 0.5rem;
+      gap: 0.625rem;
       text-decoration: none;
       margin-top: auto;
     }
