--- a/pricing-public.html
+++ b/pricing-public.html
@@ -62,10 +62,9 @@
       color: white;
       border-radius: 10px;
       text-decoration: none;
-      font-weight: 600;
+      font-weight: 700;
       transition: all 0.2s;
       display: inline-block;
-      text-shadow: 0 1px 2px rgba(0, 0, 0, 0.1);
     }
 
     .btn-primary:hover {
@@ -147,9 +146,9 @@
 
     .pricing-card.featured {
       border-color: #4F46E5;
-      border-width: 3px;
+      border-width: 2px;
       box-shadow: 0 10px 40px -10px rgba(79, 70, 229, 0.4);
-      transform: scale(1.02);
+      padding: 2.5rem;
     }
 
     .popular-badge {
@@ -220,14 +219,13 @@
 
     .cta-button {
       width: 100%;
-      padding: 1.375rem 1.25rem;
+      padding: 1.25rem;
       background: linear-gradient(135deg, #4F46E5, #7C3AED);
       color: white;
       border: none;
       border-radius: 12px;
-      font-weight: 800;
+      font-weight: 700;
       font-size: 1.125rem;
-      letter-spacing: 0.025em;
       cursor: pointer;
       transition: all 0.2s;
       display: flex;
