--- a/pricing-public.html
+++ b/pricing-public.html
@@ -59,7 +59,7 @@
     .btn-primary {
       padding: 0.75rem 1.5rem;
       background: linear-gradient(135deg, #4F46E5, #7C3AED);
-      color: white;
+      color: #FFFFFF !important;
       border-radius: 10px;
       text-decoration: none;
       font-weight: 700;
@@ -142,13 +142,6 @@
     .pricing-card:hover {
       transform: translateY(-8px);
       box-shadow: 0 20px 25px -5px rgba(0, 0, 0, 0.1);
-    }
-
-    .pricing-card.featured {
-      border-color: #4F46E5;
-      border-width: 2px;
-      box-shadow: 0 10px 40px -10px rgba(79, 70, 229, 0.4);
-      padding: 2.5rem;
     }
 
     .popular-badge {
@@ -311,31 +304,15 @@
     </div>
 
     <div class="pricing-grid">
-      <!-- Free Tier -->
-      <div class="pricing-card">
-        <div class="tier-name">Free</div>
-        <div class="tier-price">
-          $0<span>/month</span>
-        </div>
-        <div class="tier-description">Perfect for trying out BizTrack</div>
-        <ul class="features-list">
-          <li><i class="fas fa-check-circle"></i> <strong>100 QR codes</strong> per month</li>
-          <li><i class="fas fa-check-circle"></i> Blockchain verification</li>
-          <li><i class="fas fa-check-circle"></i> IPFS storage</li>
-          <li><i class="fas fa-check-circle"></i> Email support</li>
-          <li><i class="fas fa-check-circle"></i> Community access</li>
-          <li class="disabled"><i class="fas fa-times-circle"></i> Priority verification</li>
-          <li class="disabled"><i class="fas fa-times-circle"></i> Analytics</li>
-          <li class="disabled"><i class="fas fa-times-circle"></i> API access</li>
-        </ul>
-        <a href="register.html" class="cta-button">
-          <i class="fas fa-rocket"></i> Start Free
-        </a>
+      <!-- Free Tier Blurb -->
+      <div style="grid-column: 1 / -1; text-align: center; padding: 2rem; background: white; border-radius: 15px; margin-bottom: 2rem; box-shadow: 0 2px 4px rgba(0, 0, 0, 0.05);">
+        <p style="font-size: 1.25rem; color: #64748B; margin: 0;">
+          <strong style="color: #4F46E5;">New to BizTrack?</strong> We give you <strong>100 QR codes for free</strong> to test out the platform — no credit card required!
+        </p>
       </div>
 
       <!-- Essential Tier -->
-      <div class="pricing-card featured">
-        <div class="popular-badge">MOST POPULAR</div>
+      <div class="pricing-card">
         <div class="tier-name">Essential</div>
         <div class="tier-price">
           $49<span>/month</span>
