--- a/pricing-public.html
+++ b/pricing-public.html
@@ -289,13 +289,13 @@
 <body>
   <nav>
     <div class="logo">
-      <i class="fas fa-box"></i> BizTrack
+      <img src="8bd1b1ec-0edc-4581-92b8-51ac2db94afe-removebg-preview.png" alt="BizTrack" style="height: 50px; vertical-align: middle;">
     </div>
     <div class="nav-links">
       <a href="index.html">Home</a>
       <a href="pricing-public.html">Pricing</a>
       <a href="login.html">Login</a>
-      <a href="register.html" class="btn-primary">Sign Up Free</a>
+      <a href="register.html?redirect=pricing" class="btn-primary">Sign Up Free</a>
     </div>
   </nav>
 
@@ -304,7 +304,7 @@
       <h1>Simple, Transparent Pricing</h1>
       <p>Choose the plan that's right for your business</p>
       <div class="cta-group">
-        <a href="register.html" class="btn-primary">
+        <a href="register.html?redirect=pricing" class="btn-primary">
           <i class="fas fa-rocket"></i> Get Started Free
         </a>
         <a href="#" class="btn-secondary">
@@ -340,7 +340,7 @@
           <li class="disabled"><i class="fas fa-times-circle"></i> Custom integrations</li>
           <li class="disabled"><i class="fas fa-times-circle"></i> Dedicated account manager</li>
         </ul>
-        <a href="register.html" class="cta-button">
+        <a href="register.html?plan=essential&price=49" class="cta-button">
           <i class="fas fa-arrow-up"></i> Upgrade to Essential
         </a>
       </div>
@@ -364,7 +364,7 @@
           <li class="disabled"><i class="fas fa-times-circle"></i> White-label options</li>
           <li class="disabled"><i class="fas fa-times-circle"></i> SLA guarantees</li>
         </ul>
-        <a href="register.html" class="cta-button">
+        <a href="register.html?plan=scale&price=149" class="cta-button">
           <i class="fas fa-arrow-up"></i> Upgrade to Scale
         </a>
       </div>
@@ -388,7 +388,7 @@
           <li><i class="fas fa-check-circle"></i> Priority onboarding</li>
           <li><i class="fas fa-check-circle"></i> Training & consultation</li>
         </ul>
-        <a href="mailto:sales@biztrack.io" class="cta-button">
+        <a href="register.html?plan=enterprise&price=499" class="cta-button">
           <i class="fas fa-phone"></i> Contact Sales
         </a>
       </div>
