--- a/dashboard.html
+++ b/dashboard.html
@@ -470,7 +470,7 @@
 <body>
   <nav class="sidebar">
     <div class="sidebar-logo">
-      <img src="assets/8bd1b1ec-0edc-4581-92b8-51ac2db94afe-removebg-preview.png" alt="BizTrack Logo" />
+      <h1>🚚 BizTrack</h1>
     </div>
     <ul class="sidebar-nav">
       <li><a href="verify.html"><i class="fas fa-check-circle"></i> Verify Product</a></li>
