--- a/verify.html
+++ b/verify.html
@@ -711,7 +711,7 @@
       <li><a href="index.html"><i class="fas fa-home"></i> Home</a></li>
       <li><a href="business.html"><i class="fas fa-briefcase"></i> For Businesses</a></li>
       <li><a href="verify.html" class="active"><i class="fas fa-check-circle"></i> Verify Product</a></li>
-      <li><a href="pricing.html"><i class="fas fa-dollar-sign"></i> Pricing</a></li>
+      <li><a href="pricing-public.html"><i class="fas fa-dollar-sign"></i> Pricing</a></li>
       <li><a href="login.html"><i class="fas fa-user"></i> Login/Signup</a></li>
     </ul>
   </nav>
