--- a/dashboard.html
+++ b/dashboard.html
@@ -30,11 +30,10 @@
       top: 0;
       width: 280px;
       height: 100vh;
-      background: white;
-      border-right: 1px solid #E2E8F0;
-      padding: 2rem 0;
-      z-index: 100;
-      box-shadow: 4px 0 12px rgba(0, 0, 0, 0.02);
+     background: #0f172a;
+border-right: none;
+padding: 2rem 1.5rem;
+box-shadow: none;
     }
 
     .sidebar-logo {
