--- a/dashboard.html
+++ b/dashboard.html
@@ -38,10 +38,14 @@ box-shadow: none;
 
     .sidebar-logo {
       padding: 0 2rem 2rem;
-      border-bottom: 1px solid #E2E8F0;
+      border-bottom: 1px solid rgba(255, 255, 255, 0.1);
       margin-bottom: 2rem;
     }
-
+.sidebar-logo h1 {
+  color: #fff;
+  font-size: 1.5rem;
+  font-weight: 800;
+}
     .sidebar-logo img {
       max-width: 160px;
       height: auto;
