--- a/pricing.html
+++ b/pricing.html
@@ -25,7 +25,7 @@
       min-height: 100vh;
     }
 
-    /* Dark Sidebar - Matching Dashboard */
+    /* Dark Sidebar */
     .sidebar {
       position: fixed;
       left: 0;
@@ -33,10 +33,8 @@
       width: 280px;
       height: 100vh;
       background: #0f172a;
-      border-right: none;
       padding: 2rem 1.5rem;
       z-index: 100;
-      box-shadow: none;
     }
 
     .sidebar-logo {
@@ -56,10 +54,6 @@
       display: flex;
       flex-direction: column;
       gap: 0.5rem;
-    }
-
-    .sidebar-nav li {
-      margin-bottom: 0;
     }
 
     .sidebar-nav a {
@@ -82,11 +76,9 @@
     .sidebar-nav a.active {
       background: #1e293b;
       color: #3b82f6;
-      border-left: none;
     }
 
     .sidebar-nav a i {
-      margin-right: 0;
       width: 20px;
       font-size: 1.1rem;
     }
@@ -98,26 +90,58 @@
       min-height: 100vh;
     }
 
-    .header {
-      text-align: center;
-      margin-bottom: 3rem;
+    .pricing-container {
+      max-width: 1200px;
+      margin: 0 auto;
     }
 
-    .header h1 {
+    .pricing-header {
+      text-align: center;
+      margin-bottom: 2rem;
+    }
+
+    .pricing-header h1 {
       font-size: 2.5rem;
       font-weight: 800;
       color: #1E293B;
       margin-bottom: 0.5rem;
     }
 
-    .header p {
+    .pricing-header p {
       font-size: 1.125rem;
       color: #64748B;
     }
 
+    /* Free Trial Banner */
+    .free-trial-banner {
+      background: linear-gradient(135deg, #667eea 0%, #764ba2 100%);
+      color: white;
+      padding: 2rem;
+      border-radius: 16px;
+      text-align: center;
+      margin-bottom: 3rem;
+      box-shadow: 0 8px 24px rgba(102, 126, 234, 0.3);
+    }
+
+    .free-trial-banner h2 {
+      font-size: 1.75rem;
+      font-weight: 700;
+      margin-bottom: 0.5rem;
+    }
+
+    .free-trial-banner p {
+      font-size: 1.125rem;
+      opacity: 0.95;
+    }
+
+    .free-trial-banner strong {
+      font-weight: 800;
+    }
+
+    /* Pricing Grid */
     .pricing-grid {
       display: grid;
-      grid-template-columns: repeat(auto-fit, minmax(280px, 1fr));
+      grid-template-columns: repeat(auto-fit, minmax(320px, 1fr));
       gap: 2rem;
       margin-bottom: 3rem;
     }
@@ -126,10 +150,12 @@
       background: white;
       border-radius: 20px;
       padding: 2.5rem 2rem;
-      box-shadow: 0 4px 16px rgba(0, 0, 0, 0.08);
+      box-shadow: 0 2px 12px rgba(0, 0, 0, 0.08);
       border: 2px solid #E2E8F0;
       transition: all 0.3s;
       position: relative;
+      display: flex;
+      flex-direction: column;
     }
 
     .pricing-card:hover {
@@ -138,25 +164,25 @@
     }
 
     .pricing-card.popular {
-      border-color: #4F46E5;
-      box-shadow: 0 8px 32px rgba(79, 70, 229, 0.2);
+      border-color: #667eea;
+      box-shadow: 0 8px 24px rgba(102, 126, 234, 0.2);
     }
 
     .pricing-card.current-plan {
       border-color: #10B981;
-      box-shadow: 0 8px 32px rgba(16, 185, 129, 0.2);
+      box-shadow: 0 8px 24px rgba(16, 185, 129, 0.2);
     }
 
     .popular-badge {
       position: absolute;
-      top: -12px;
+      top: -14px;
       left: 50%;
       transform: translateX(-50%);
-      background: linear-gradient(135deg, #4F46E5, #7C3AED);
+      background: linear-gradient(135deg, #667eea, #764ba2);
       color: white;
       padding: 0.5rem 1.5rem;
       border-radius: 24px;
-      font-size: 0.875rem;
+      font-size: 0.75rem;
       font-weight: 700;
       text-transform: uppercase;
       letter-spacing: 0.5px;
@@ -164,14 +190,14 @@
 
     .current-plan-badge {
       position: absolute;
-      top: -12px;
+      top: -14px;
       left: 50%;
       transform: translateX(-50%);
       background: linear-gradient(135deg, #10B981, #059669);
       color: white;
       padding: 0.5rem 1.5rem;
       border-radius: 24px;
-      font-size: 0.875rem;
+      font-size: 0.75rem;
       font-weight: 700;
       text-transform: uppercase;
       letter-spacing: 0.5px;
@@ -187,34 +213,38 @@
     .tier-price {
       display: flex;
       align-items: baseline;
-      gap: 0.5rem;
-      margin-bottom: 0.5rem;
+      gap: 0.25rem;
+      margin-bottom: 0.75rem;
     }
 
     .price-amount {
       font-size: 3rem;
       font-weight: 800;
-      color: #4F46E5;
+      color: #667eea;
     }
 
     .price-period {
       font-size: 1.125rem;
       color: #64748B;
+      font-weight: 500;
     }
 
     .tier-description {
       font-size: 1rem;
       color: #64748B;
       margin-bottom: 2rem;
+      padding-bottom: 2rem;
+      border-bottom: 1px solid #E2E8F0;
     }
 
     .features-list {
       list-style: none;
       margin-bottom: 2rem;
+      flex-grow: 1;
     }
 
     .features-list li {
-      padding: 0.75rem 0;
+      padding: 0.625rem 0;
       display: flex;
       align-items: flex-start;
       gap: 0.75rem;
@@ -231,7 +261,7 @@
 
     .cta-button {
       width: 100%;
-      padding: 1.125rem 2rem;
+      padding: 1rem 2rem;
       border-radius: 12px;
       font-weight: 700;
       font-size: 1rem;
@@ -242,27 +272,18 @@
       align-items: center;
       justify-content: center;
       gap: 0.5rem;
+      margin-top: auto;
     }
 
     .cta-primary {
-      background: linear-gradient(135deg, #4F46E5, #7C3AED);
+      background: linear-gradient(135deg, #667eea, #764ba2);
       color: white;
-      box-shadow: 0 4px 12px rgba(79, 70, 229, 0.3);
+      box-shadow: 0 4px 12px rgba(102, 126, 234, 0.3);
     }
 
     .cta-primary:hover {
       transform: translateY(-2px);
-      box-shadow: 0 8px 20px rgba(79, 70, 229, 0.4);
-    }
-
-    .cta-secondary {
-      background: white;
-      color: #4F46E5;
-      border: 2px solid #4F46E5;
-    }
-
-    .cta-secondary:hover {
-      background: #F8FAFC;
+      box-shadow: 0 8px 20px rgba(102, 126, 234, 0.4);
     }
 
     .cta-current {
@@ -283,6 +304,25 @@
 
     .cta-downgrade:hover {
       background: #F8FAFC;
+      border-color: #94A3B8;
+    }
+
+    /* Footer */
+    .pricing-footer {
+      text-align: center;
+      color: #64748B;
+      font-size: 0.95rem;
+      padding: 2rem 0;
+    }
+
+    .pricing-footer a {
+      color: #667eea;
+      text-decoration: none;
+      font-weight: 600;
+    }
+
+    .pricing-footer a:hover {
+      text-decoration: underline;
     }
 
     @media (max-width: 768px) {
@@ -297,7 +337,7 @@
         padding: 1.5rem;
       }
 
-      .header h1 {
+      .pricing-header h1 {
         font-size: 2rem;
       }
 
@@ -322,13 +362,30 @@
 
   <!-- Main Content -->
   <div class="main-with-sidebar">
-    <div class="header">
-      <h1>Choose Your Plan</h1>
-      <p>Flexible pricing for businesses of all sizes</p>
-    </div>
+    <div class="pricing-container">
+      
+      <div class="pricing-header">
+        <h1>Choose Your Plan</h1>
+        <p>Flexible pricing for businesses of all sizes</p>
+      </div>
 
-    <div class="pricing-grid" id="pricingGrid">
-      <!-- Pricing cards will be dynamically generated here -->
+      <!-- Free Trial Banner -->
+      <div class="free-trial-banner">
+        <h2>Start Free Today!</h2>
+        <p>We give you <strong>10 free QR codes</strong> when you sign up — no credit card required.</p>
+      </div>
+
+      <!-- Pricing Cards -->
+      <div class="pricing-grid" id="pricingGrid">
+        <!-- Dynamically generated -->
+      </div>
+
+      <!-- Footer -->
+      <div class="pricing-footer">
+        All plans include: Blockchain verification, IPFS storage, and QR code generation<br>
+        Questions? <a href="mailto:support@biztrack.io">Contact our team</a>
+      </div>
+
     </div>
   </div>
 
@@ -340,20 +397,8 @@
     // Initialize Stripe
     const stripe = Stripe('pk_test_51QPnfvRqEoyB6yY7aGlrGv6ArcWsX11HhaTxpDRtB9RiJKs2bJzZC5ZRJoLvADWsP2GUOcuUOyIpxsw7k59b4Rkz00VhNGBzBU');
 
-    // ✅ NEW TIER LIMITS
+    // ✅ TIERS - No Free tier (only Essential, Scale, Enterprise)
     const TIERS = {
-      free: {
-        name: 'Free',
-        price: 0,
-        qrCodes: 10,
-        features: [
-          '10 QR codes per month',
-          'Blockchain verification',
-          'IPFS storage',
-          'Email support',
-          'Community access'
-        ]
-      },
       essential: {
         name: 'Essential',
         price: 49,
@@ -361,7 +406,7 @@
         popular: true,
         features: [
           '500 QR codes per month',
-          'Priority blockchain verification',
+          'Blockchain verification',
           'IPFS storage',
           'Priority email support',
           'Basic analytics',
@@ -413,7 +458,7 @@
         }
       } catch (error) {
         console.error('Failed to load user tier:', error);
-        renderPricingCards(); // Render with default tier
+        renderPricingCards();
       }
     }
 
@@ -427,7 +472,7 @@
         const isDowngrade = getTierLevel(tierKey) < getTierLevel(currentUserTier);
 
         const card = document.createElement('div');
-        card.className = `pricing-card ${tier.popular ? 'popular' : ''} ${isCurrentPlan ? 'current-plan' : ''}`;
+        card.className = `pricing-card ${tier.popular && !isCurrentPlan ? 'popular' : ''} ${isCurrentPlan ? 'current-plan' : ''}`;
 
         let badge = '';
         if (isCurrentPlan) {
@@ -440,7 +485,7 @@
         if (isCurrentPlan) {
           buttonHTML = '<button class="cta-button cta-current"><i class="fas fa-check-circle"></i> Current Plan</button>';
         } else if (isUpgrade) {
-          buttonHTML = `<button class="cta-button cta-primary" onclick="upgradeTier('${tierKey}')"><i class="fas fa-arrow-up"></i> Upgrade to ${tier.name}</button>`;
+          buttonHTML = `<button class="cta-button cta-primary" onclick="upgradeTier('${tierKey}')"><i class="fas fa-rocket"></i> Get Started</button>`;
         } else if (isDowngrade) {
           buttonHTML = `<button class="cta-button cta-downgrade" onclick="downgradeTier('${tierKey}')"><i class="fas fa-arrow-down"></i> Downgrade to ${tier.name}</button>`;
         }
@@ -506,7 +551,7 @@
         return;
       }
 
-      alert('Downgrade functionality coming soon! Please contact support@biztrack.io to downgrade your plan.');
+      alert('To downgrade your plan, please contact support@biztrack.io and we\'ll help you right away!');
     }
 
     // Check if user just canceled
