--- a/dashboard.html
+++ b/dashboard.html
@@ -475,7 +475,7 @@ box-shadow: none;
     <ul class="sidebar-nav">
       
       <li><a href="dashboard.html" class="active"><i class="fas fa-chart-line"></i> Dashboard</a></li>
-      <li><a href="pricing.html"><i class="fas fa-credit-card"></i> Pricing & Plans</a></li>
+      <li><a href="pricing.html"><i class="fas fa-credit-card"></i> Subscription</a></li>
       <li><a href="settings.html"><i class="fas fa-cog"></i> Settings</a></li>
     </ul>
   </nav>
